--- a/styles.css
+++ b/styles.css
@@ -1,22 +1,64 @@
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@500&family=Righteous&family=Yeseva+One&display=swap');
 *{
     margin: 0;
     padding: 0;
 }
 
+@keyframes dropIn {
+    from {
+        transform: translateX(500px);
+        opacity: 0;
+    }
+    to {
+        transform:translateX(0);
+        opacity: 1;
+    }
+}
+
 html{
-    background-color: #eee;
+    background: linear-gradient(135deg, #DDFFF7 0%, #E2A0FF 100%);
+    overflow-x: hidden;
     width: 100%;
     height: 100%;
+    color: #28262C;
+}
+
+/* Add a black background color to the top navigation */
+.topnav {
+  background-color: #28262C;
+  font-family: 'Montserrat', sans-serif;
+  overflow: hidden;
+}
+
+.topnav a {
+  float: left;
+  color: #FF6F59;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+  font-size: 20px;
+}
+
+.topnav a:hover {
+  background-color: #529573;
+  color: #28262C;
+}
+
+.topnav a.active {
+  background-color: #FF6F59;
+  color: white;
 }
 
 .main-content{
     margin: 25vh auto;
     width: fit-content;
     text-align: center;
+    font-family: 'Montserrat', sans-serif;
 }
 
 .main-content h1{
     margin-bottom: 5vh;
+    font-size: 50px;
 }
 
 .main-content p{
@@ -24,31 +66,48 @@ html{
     font-size: 22px;
 }
 
+.about-content{
+    margin: 25vh;
+    width: fit-content;
+    font-family: 'Montserrat', sans-serif;
+}
+
+.about-content h1{
+    margin-bottom: 5vh;
+    font-size: 50px;
+}
+
+.about-content p{
+    margin-bottom: 10vh;
+    font-size: 22px;
+}
+
 .button{
-    background-color: #538bd4;
+    background-color: #529573;
     width: 30vw;
     height: 20vh;
     border-style: none;
     border-radius: 75px;
-    box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19);
+    box-shadow: 0 8px 16px 0 #28262C30, 0 6px 20px 0 #28262C30;
     cursor: pointer;
     font-size: 50px;
     color: #eeeeee;
+    animation: dropIn 0.5s ease forwards;
 }
 
 .button:hover{
-    background-color: #639be4;
+    background-color: #62a583;
 }
 
 .pressed{
-    -webkit-box-shadow: inset 0px 0px 15px #c1c1c1;
-    -moz-box-shadow: inset 0px 0px 15px #c1c1c1;
-    box-shadow: inset 0px 0px 15px #c1c1c1;
+    -webkit-box-shadow: inset 0px 0px 15px #FF6F59;
+    -moz-box-shadow: inset 0px 0px 15px #FF6F59;
+    box-shadow: inset 0px 0px 15px #FF6F59;
     outline: none;
-    background-color: #808080;
+    background-color: #28262C;
 }
 
 .pressed:hover{
-    background-color: #808080;
+    background-color: #28262C;
     cursor: unset;
 }
