slots and volume sliders
added 4th image to slots and made volume sliders for music and sounds. 
Also separated the js into its own file.

--- a/styles.css
+++ b/styles.css
@@ -169,3 +169,13 @@ html{
 .wintext{
     color: #FF6F59;
 }
+
+.audio-container {
+    display: flex;
+    align-items: center;
+    gap: 10px;
+    color:#FF6F59;
+}
+.volume-slider {
+    width: 150px;
+}
