--- a/styles.css
+++ b/styles.css
@@ -86,7 +86,7 @@ html{
 }
 
 .slots-content{
-    margin: 5vh auto;
+    margin: 2vh auto;
     width: fit-content;
     text-align: center;
     font-family: 'Montserrat', sans-serif;
@@ -172,6 +172,8 @@ html{
 
 .audio-container {
     display: flex;
+    width: fit-content;
+    margin: auto auto;
     align-items: center;
     gap: 10px;
     color:#FF6F59;
