--- a/styles.css
+++ b/styles.css
@@ -23,6 +23,14 @@
 		transform:scale(1);
 	}
 }
+@keyframes buttonUnclick {
+	from {
+		transform: scale(1.3);
+	}
+	to {
+		transform:scale(1);
+	}
+}
 
 html{
 	background: linear-gradient(135deg, #DDFFF7 0%, #E2A0FF 100%);
@@ -286,7 +294,7 @@ html{
 	cursor: pointer;
 	font-size: 50px;
 	color: #eeeeee;
-	animation: dropIn 0.5s ease forwards;
+	animation: buttonUnclick 0.2s ease forwards;
 }
 
 .slotbutton:hover{
