show user when their button buck balance changes

--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -9,5 +9,5 @@
         <a href="news" {% if include.active == "news" %}class="active"{% endif %}>News</a>
         <a href="mailto:contact@buttoncorp.org">Contact</a>
     </ul>
-    <div><a class="bucky"></a></div>
+    <div><a class="bucky">Button Bucks: <span id="button-bucks"></span><span id="button-bucks-change"></span></a></div>
 </div>
