--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -1,13 +1,14 @@
 <div class="topnav">
-    <div class="topimagediv"><img style="width:45px;height:45px;" src="assets/img/DarkLogo.png"></div>
-    <ul>
-        <a href="/" {% if include.active == "index" %}class="active"{% endif %}>Daily Button</a>
-        <a href="about" {% if include.active == "about" %}class="active"{% endif %}>About Us</a>
-        <a href="slots" {% if include.active == "slots" %}class="active"{% endif %}>Slots</a>
-        <a href="shop" {% if include.active == "shop" %}class="active"{% endif %}>Shop</a>
-        <a href="jungle" {% if include.active == "jungle" %}class="active"{% endif %}>Jungle</a>
-        <a href="news" {% if include.active == "news" %}class="active"{% endif %}>News</a>
-        <a href="mailto:contact@buttoncorp.org">Contact</a>
-    </ul>
-    <div><a class="bucky">Button Bucks: <span id="button-bucks"></span><span id="button-bucks-change"></span></a></div>
+	<div class="topimagediv"><img style="width:45px;height:45px;" src="assets/img/DarkLogo.png"></div>
+	<ul>
+		<a href="/" {% if include.active == "index" %}class="active"{% endif %}>Daily Button</a>
+		<a href="about" {% if include.active == "about" %}class="active"{% endif %}>About Us</a>
+		<a href="slots" {% if include.active == "slots" %}class="active"{% endif %}>Slots</a>
+		<a href="shop" {% if include.active == "shop" %}class="active"{% endif %}>Shop</a>
+		<a href="jungle" {% if include.active == "jungle" %}class="active"{% endif %}>Jungle</a>
+		<a href="news" {% if include.active == "news" %}class="active"{% endif %}>News</a>
+		<a href="settings" {% if include.active == "settings" %}class="active"{% endif %}>Settings</a>
+		<a href="mailto:contact@buttoncorp.org">Contact</a>
+	</ul>
+	<div><a class="bucky">Button Bucks: <span id="button-bucks"></span><span id="button-bucks-change"></span></a></div>
 </div>
