Improved web design

--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -1,5 +1,5 @@
 <div class="topnav">
-	<div class="topimagediv"><img style="width:45px;height:45px;" src="assets/img/DarkLogo.png"></div>
+	<div class="topimagediv"><a>Gems: 0</a></div>
 	<ul>
 		<a href="/" {% if include.active == "index" %}class="active"{% endif %}>Daily Button</a>
 		<a href="about" {% if include.active == "about" %}class="active"{% endif %}>About Us</a>
